<resources>
    <string name="app_name">Yet Another Todo App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="due_soon">Due Soon:</string>
    <string name="start_label">Start</string>
    <string name="due_label">Due</string>
    <string name="delete">Delete icon</string>
    <string name="save">Save</string>
    <string name="clear_due_date">Clear Due Date</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="title">Title</string>
    <string name="empty_image">Empty todo list image</string>
</resources>