<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                app:layout_constraintEnd_toStartOf="@+id/delete"
                app:layout_constraintStart_toEndOf="@id/completed"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Todo item" />

            <TextView
                android:id="@+id/start_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                android:text="@string/start_label"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintLeft_toRightOf="@id/completed"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintLeft_toRightOf="@id/start_label"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                android:id="@+id/due_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                android:text="@string/due_label"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintRight_toLeftOf="@id/due"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="@tools:sample/date/mmddyy" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>